--- a/specorbit-backend/package.json
+++ b/specorbit-backend/package.json
@@ -15,17 +15,20 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@types/express": "^5.0.6",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "openapi-types": "^12.1.3",
     "passport": "^0.7.0",
-    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "redis": "^5.10.0",
+    "ts-morph": "^27.0.2",
     "typescript": "^5.9.3",
     "winston": "^3.19.0",
     "zod": "^4.1.13"
@@ -35,6 +38,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.1",
+    "@types/passport-github2": "^1.2.9",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
