--- a/specorbit-backend/package.json
+++ b/specorbit-backend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts"
+    "dev": " tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "cross-env NODE_EXTRA_CA_CERTS=certs/aiven-ca.pem node dist/index.js",
+    "seed": "cross-env NODE_EXTRA_CA_CERTS=certs/aiven-ca.pem tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +34,8 @@
     "ts-morph": "^27.0.2",
     "typescript": "^5.9.3",
     "winston": "^3.19.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "@apidevtools/swagger-parser": "^10.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -39,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.1",
     "@types/passport-github2": "^1.2.9",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "jest": "^30.2.0",
