--- a/specorbit-backend/package.json
+++ b/specorbit-backend/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test:auth": "tsx scripts/test-auth.ts",
+    "test:auth-team": "tsx scripts/test-auth-team.ts",
+    "test:create-project": "tsx scripts/test-create-project.ts",
+    "test:drift": "tsx scripts/test-drift.ts",
+    "test:drift-list": "tsx scripts/test-list-drift.ts",
+    "test:refresh": "tsx scripts/test-refresh.ts",
+    "test:refresh-revoke": "tsx scripts/test-refresh-revoke.ts",
+    "test:scheduler": "tsx scripts/test-scheduler.ts",
+    "test:docs": "tsx scripts/test-docs.ts"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +40,8 @@
     "ts-morph": "^27.0.2",
     "typescript": "^5.9.3",
     "winston": "^3.19.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
