--- a/specorbit-frontend/package.json
+++ b/specorbit-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.2",
     "axios": "^1.13.2",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
     "swagger-ui-react": "^5.31.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
