--- a/specorbit-backend/package.json
+++ b/specorbit-backend/package.json
@@ -24,9 +24,11 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@types/express": "^5.0.6",
+    "adm-zip": "^0.5.16",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bull": "^4.16.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
@@ -40,10 +42,10 @@
     "ts-morph": "^27.0.2",
     "typescript": "^5.9.3",
     "winston": "^3.19.0",
-    "zod": "^4.1.13",
-    "cookie-parser": "^1.4.6"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
